...
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/blue"
                            android:textSize="30sp" />
                    </LinearLayout>

                    <com.ekn.gruzer.gaugelibrary.HalfGauge
                        android:id="@+id/halfGauge"
                        android:layout_width="match_parent"
                        android:layout_height="240dp" />

                </LinearLayout>


...
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/krew_recycler"
            android:layout_width="347dp"
            android:layout_height="491dp"
            android:layout_marginBottom="56dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/kilowattButton"
            app:layout_constraintEnd_toEndOf="@+id/kilowattButton"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="@+id/kilowattButton"
            app:layout_constraintTop_toTopOf="@+id/kilowattButton" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            tools:ignore="MissingClass">


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/tip_square"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/layout_bg3"
                        android:enabled="true"
...
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/manage"
                android:layout_width="160dp"
                android:layout_height="25dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/layout_bg6"
                android:text="Manage Krew"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/breakdown"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/layout_bg3"
                        android:gravity="bottom"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/kilowattButton"
                />


            <EditText
                android:id="@+id/friend_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/layout_bg10"
...
