<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_gravity="center_horizontal"
    android:layout_marginTop="10dp"
    tools:context=".ui.fragments.LoginFragment">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">

            <ImageView
                android:id="@+id/moxie_login_logo"
                android:layout_width="204dp"
                android:layout_height="175dp"
                android:src="@drawable/app_logo"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/login_heading"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="7dp"
                android:text="@string/login_heading"
                android:textColor="@color/lighter_green"
                android:textFontWeight="15"
                android:textSize="28sp"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/login_error_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_error"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:paddingRight="5dp"
                android:paddingBottom="2dp"
                android:visibility="gone"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal" />

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="32dp"
                android:layout_height="22dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/email"
                app:layout_gravity="center_horizontal|center_vertical"
                app:tint="@color/moxie_orange" />

            <EditText
                android:id="@+id/username"
                android:layout_width="287dp"
                android:layout_height="58dp"
                android:layout_marginTop="7dp"
                android:autofillHints=""
                android:hint="@string/prompt_email"
                android:inputType="text|textEmailAddress"
                android:minHeight="48dp"
                android:selectAllOnFocus="true" />

            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="41dp"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_baseline_password_24"
                app:layout_gravity="center_vertical"
                app:tint="@color/moxie_orange" />

            <EditText
                android:id="@+id/password"
                android:layout_width="287dp"
                android:layout_height="54dp"
                android:autofillHints=""
                android:hint="@string/prompt_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:selectAllOnFocus="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="282dp"
                android:layout_height="56dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/darker_moxie_orange"
                android:enabled="true"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/no_account_text"
                    android:layout_width="154dp"
                    android:layout_height="22dp"
                    android:text="@string/no_account" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_register_button"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="@color/lighter_green"
                    android:text="@string/register_text"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.gridlayout.widget.GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>